<resources>
    <string name="app_name">DietNow!</string>
    <string name="add">Add</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile">Profile</string>
    <string name="meals">Meals</string>
    <string name="recipes">Recipes</string>
    <string name="products">Products</string>
    <string name="title_activity_meals">MealsActivity</string>
    <string name="title_activity_recipes">RecipesActivity</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="shopping_list">Shopping List</string>
    <string name="title_activity_add_meal">AddMealActivity</string>
    <string name="name">Name</string>
    <string name="title_activity_add_recipe">AddRecipeActivity</string>
    <string name="products_chart">Products Chart</string>

</resources>
